--- a/problem_03.html
+++ b/problem_03.html
@@ -6,9 +6,10 @@
     <title>Problem 3 Solution</title>
 </head>
 <body>
-    <img id="image" src="./pexels-photo.jpg" alt="">
     <button onclick="firstButton()">First Button</button>
     <button onclick="secondButton()">Second Button</button>
+    <br />
+    <img id="image" src="./image1.jpg" alt="">
 
     <script>
         function firstButton(){
